src/objects/UM_PaymentInformation__c.object
<CustomObject>
    <description>Extract from Kenan</description>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; UM_Billing_Location__r.Id ,UM_Billing_Location__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Affiliate_Identifier__c</fullName>
        <description>mkt_code represents Hessen, Nordrehien-Westaflen, Baden würtemberg – the three entities</description>
        <label>Affiliate Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Billing_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Payment Information</relationshipLabel>
        <relationshipName>Payment_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Customer_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Information</relationshipLabel>
        <relationshipName>Payment_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Original_Transaction_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction ID</label>
        <referenceTo>UM_PaymentInformation__c</referenceTo>
        <relationshipLabel>Payment Information</relationshipLabel>
        <relationshipName>Payment_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Overpayments_Currency__c</fullName>
        <description>Field to show real value of Overpayments sent by Kenan</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Overpayments__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Payment_Method_Translation__c</fullName>
        <description>Translation of values from Payment Method from Kenan</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Payment_Method__c</fullName>
        <description>1 = check
3 = direct debit
4 = debit card</description>
        <label>Payment Method (N)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Rejection_Reason__c</fullName>
        <description>Rejections originated by the customer need to extracted and identified</description>
        <inlineHelpText>Rejections originated by the customer need to extracted and identified</inlineHelpText>
        <label>UM Rejection Reason</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Retry_Count__c</fullName>
        <description>Number of times the payment request has been sent to the clearinghouse</description>
        <label>Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Amount_Currency__c</fullName>
        <description>Field to show real value of Transcation Amount sent by Kenan</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Date_Converted__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Date__c</fullName>
        <description>For DD, the date a payment was sent to clearing house for DD
For REFUNDS the refund date</description>
        <label>Transaction Date</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_ID__c</fullName>
        <description>Tracking_id and tracking_id_serv in combination uniquely identify a payment</description>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UM_Transaction_Name__c</fullName>
        <label>Transaction Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Parent__c</fullName>
        <label>Parent Transaction</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Status_Translation__c</fullName>
        <description>Translation of values from Transaction Status from Kenan</description>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Transaction_Status__c</fullName>
        <description>0 = waiting
5 = payment reversal
1 = hold
6 = canceled
2 = sent
7 = deleted
3 = accepted
8 = posted
4 = rejected
9 = disconnected account record</description>
        <label>Transaction Status (N)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Payment Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UM_Transaction_ID__c</columns>
        <columns>UM_Original_Transaction_ID__c</columns>
        <columns>UM_Customer_SF_ID__c</columns>
        <columns>UM_Billing_Location__c</columns>
        <columns>UM_Affiliate_Identifier__c</columns>
        <columns>UM_Payment_Method_Translation__c</columns>
        <columns>UM_Transaction_Status_Translation__c</columns>
        <columns>UM_Transaction_Amount_Currency__c</columns>
        <columns>UM_Transaction_Date_Converted__c</columns>
        <columns>UM_Retry_Count__c</columns>
        <columns>UM_Overpayments_Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>